# agent-control-core

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
arduino/guarded_machine_call/guarded_machine_cell/: guarded_machine_cell.ino
configs/: app.yaml  models.yaml  policies.yaml
docs/: architecture.md  design-principles.md  index.md  onepager.md  policy-model.md  threat-model.md  whitepaper.md
prompts/: assess_risk.md  explain_denial.md  generate_plan.md  request_approval.md
src/agent_control_core/: demo.py  machine_demo.py  operator_loop.py  settings.py
src/agent_control_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_control_core/audit/: logger.py
src/agent_control_core/execution/: __init__.py  commands.py  executor.py  serial_link.py
src/agent_control_core/llm/: client.py  prompts.py  structured.py
src/agent_control_core/machine/: intent_parser.py  procedures.py  state_logic.py  transitions.py
src/agent_control_core/policies/: engine.py  rules.py
src/agent_control_core/schemas/: actions.py  approvals.py  audit.py  common.py  plans.py  policies.py  state.py  tasks.py
src/agent_control_core/workflows/: base.py  checkpoints.py
tests/: test_intent_parser.py  test_operator_fallbacks.py
tests/integration/: test_demo_mock.py  test_machine_demo_mock.py
tests/unit/: test_executor.py  test_machine_actions_schema.py  test_machine_state_logic.py  test_machine_transitions.py  test_operator_fallbacks.py  test_operator_guardrails.py  test_policy_engine.py  test_policy_rules.py
